# utmn-parser

./: .gitignore  a.json  flake8.ini  main.py  moais.csv  moais_format.csv  pyproject.toml  settings.py  settings.yaml.copy
app/: schemas.py  utmn_parser.py
output/: students.csv  students_isit_out.csv  students_isit_output.csv  students_out.csv
