[tool.poetry]
name = "utmn-parser"
version = "0.1.0"
description = ""
authors = ["ZetoOfficial <tpptgs@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
pydantic = "^1.9.1"
PyYAML = "^6.0"
requests = "^2.28.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
